CNDE-2277 avoid using indexes for captured keys/messages