@@ -21,6 +21,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.*;
 import org.springframework.kafka.core.KafkaTemplate;
 
+import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
@@ -101,8 +102,10 @@ class InvestigationServiceTest {
         transformer.setInterviewOutputTopicName(interviewTopicOutput);
         transformer.setContactOutputTopicName(contactTopicOutput);
         transformer.setPageCaseAnswerOutputTopicName("pageCaseAnswer");
+        transformer.setInvestigationCaseManagementTopicName("investigationCaseManagement");
         transformer.setInterviewAnswerOutputTopicName("interviewAnswer");
         transformer.setInterviewNoteOutputTopicName("interviewNote");
+        transformer.setRdbMetadataColumnsOutputTopicName("metadataColumns");
     }
 
     @AfterEach
@@ -189,7 +192,7 @@ class InvestigationServiceTest {
         Long interviewUid = 234567890L;
         String payload = "{\"payload\": {\"after\": {\"interview_uid\": \"" + interviewUid + "\"}}}";
 
-        final gov.cdc.etldatapipeline.investigation.repository.model.dto.Interview interview = constructInterview(interviewUid);
+        final Interview interview = constructInterview(interviewUid);
         when(interviewRepository.computeInterviews(String.valueOf(interviewUid))).thenReturn(Optional.of(interview));
         when(kafkaTemplate.send(anyString(), anyString(), anyString())).thenReturn(CompletableFuture.completedFuture(null));
         when(kafkaTemplate.send(anyString(), anyString(), isNull())).thenReturn(CompletableFuture.completedFuture(null));
@@ -206,10 +209,9 @@ class InvestigationServiceTest {
                         verify(kafkaTemplate, times(6)).send(topicCaptor.capture(), keyCaptor.capture(), messageCaptor.capture())
                 );
 
-        String actualTopic = topicCaptor.getAllValues().get(0);
-        String actualKey = keyCaptor.getAllValues().get(0);
-        String actualValue = messageCaptor.getAllValues().get(0);
-
+        String actualTopic = topicCaptor.getAllValues().getFirst();
+        String actualKey = keyCaptor.getAllValues().getFirst();
+        String actualValue = messageCaptor.getAllValues().getFirst();
 
         var actualInterviewKey = objectMapper.readValue(
                 objectMapper.readTree(actualKey).path("payload").toString(), InterviewReportingKey.class);
@@ -262,10 +264,9 @@ class InvestigationServiceTest {
                         verify(kafkaTemplate, times(3)).send(topicCaptor.capture(), keyCaptor.capture(), messageCaptor.capture())
                 );
 
-        String actualTopic = topicCaptor.getAllValues().get(0);
-        String actualKey = keyCaptor.getAllValues().get(0);
-        String actualValue = messageCaptor.getAllValues().get(0);
-
+        String actualTopic = topicCaptor.getAllValues().getFirst();
+        String actualKey = keyCaptor.getAllValues().getFirst();
+        String actualValue = messageCaptor.getAllValues().getFirst();
 
         var actualContactKey = objectMapper.readValue(
                 objectMapper.readTree(actualKey).path("payload").toString(), ContactReportingKey.class);
@@ -316,9 +317,19 @@ class InvestigationServiceTest {
 
         verify(kafkaTemplate, times(18)).send(topicCaptor.capture(), keyCaptor.capture(), messageCaptor.capture());
 
-        String actualTopic = topicCaptor.getAllValues().get(15);
-        String actualKey = keyCaptor.getAllValues().get(15);
-        String actualValue = messageCaptor.getAllValues().get(15);
+        String actualTopic = null;
+        String actualKey = null;
+        String actualValue = null;
+
+        List<String> topics = topicCaptor.getAllValues();
+        for (int i = 0; i < topics.size(); i++) {
+            if (topics.get(i).equals(investigationTopicOutput)) {
+                actualTopic = topics.get(i);
+                actualKey = keyCaptor.getAllValues().get(i);
+                actualValue = messageCaptor.getAllValues().get(i);
+                break;
+            }
+        }
 
         var actualReporting = objectMapper.readValue(
                 objectMapper.readTree(actualValue).path("payload").toString(), InvestigationReporting.class);
